Revert "fix: fix distorting image placeholder"
This reverts commit 96b8493789b6d2c0fa4ee2696186a0416fc40521.

--- a/section1.css
+++ b/section1.css
@@ -101,6 +101,6 @@ body {
     align-items: center;
     background: darkgray;
     box-sizing: border-box;
-    height: 288px;
-    width: 480px;
+    height: 30vh;
+    width: 25vw;
   }
